EPA project/elk-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  namespace: default
spec:
  rules:
  - host: "elk.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
  - host: "argocd.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  - host: "wordpress.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
